--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_weight="1"
-        app:srcCompat="@drawable/Tic_tac_toe" />
+        app:srcCompat="@drawable/tictactoe" />
 
     <LinearLayout
         android:layout_width="match_parent"
