--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -108,7 +108,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:gravity="center"
-            android:text="Y Turn"
+            android:text="Yy Turn"
             android:textColor="#1e3799"
             android:textSize="30sp" />
 
