--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,19 +41,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:shadowColor="@color/colorPrimary"
+            style="@android:style/Widget.Button.Inset"
             android:text="Instructions"
-            android:textColor="@color/colorPrimary"
-            android:textColorLink="@color/colorPrimary" />
+            android:textColor="@color/colorPrimary"/>
 
         <Button
             android:id="@+id/start"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            style="@android:style/Widget.Button.Inset"
             android:text="start game"
-            android:textColor="@color/colorPrimary"
-            android:textColorLink="@color/colorPrimary" />
+            android:textColor="@color/colorPrimary"/>
     </LinearLayout>
 
     <TextView
